[BUGFIX] Correct overflow issues

--- a/sass/_component_page.scss
+++ b/sass/_component_page.scss
@@ -53,6 +53,7 @@
 }
 .page-main-content {
     width: 100%;
+    min-width: 0;
     flex-grow: 1;
 }
 
