--- a/sass/_component_pygments.scss
+++ b/sass/_component_pygments.scss
@@ -25,8 +25,12 @@ div[class^='highlight-'] {
     }
 }
 .highlighttable {
+    width: 100%;
     td {
         padding: 0;
+        &.code {
+            width: 100%;
+        }
     }
     .highlight pre {
         border-top-left-radius: 0;
